# lemonaid

./: .gitignore  CHANGES.md  LICENSE  README.md  pyproject.toml  thoughts.md
.claude/: CLAUDE.md
docs/: claude-patch.md  claude.md  codex.md  config.md  for-lemons.md  keybindings.md  macos.md  openclaw.md  opencode.md  tmux.md  wezterm.md
src/lemonaid/: __init__.py  cli.py  config.py  handlers.py  log.py  paths.py  wezterm.py
src/lemonaid/claude/: __init__.py  bootstrap.py  cli.py  notify.py  patcher.py  projects.py  resume.py  statusline.py  summarize.py  watcher.py
src/lemonaid/codex/: __init__.py  cli.py  notify.py  utils.py  watcher.py
src/lemonaid/inbox/: __init__.py  channel.py  cli.py  db.py  tui.py
src/lemonaid/inbox/migrations/: __init__.py  m001_add_terminal_env.py  m002_rename_title_add_name.py  m003_rename_terminal_env.py
src/lemonaid/inbox/tui/: __init__.py  app.py  screens.py  utils.py
src/lemonaid/lemon_watchers/: __init__.py  common.py  watcher.py
src/lemonaid/macos/: __init__.py  cli.py  launchd.py  notify.py  watcher.py
src/lemonaid/openclaw/: __init__.py  cli.py  notify.py  ssh.py  utils.py  watcher.py
src/lemonaid/opencode/: __init__.py  cli.py  notify.py  utils.py  watcher.py
src/lemonaid/slack/: __init__.py  cli.py  mappings.py
src/lemonaid/tmux/: __init__.py  cli.py  navigation.py  scratch.py  session.py  window_color.py  window_status.py
src/lemonaid/wezterm/: __init__.py  cli.py  navigation.py
tests/: test_codex_watcher.py  test_config.py  test_config_openclaw.py  test_db.py  test_lemon_watchers.py  test_openclaw_notify_selection.py  test_openclaw_ssh.py  test_openclaw_watcher.py  test_opencode_notify.py  test_opencode_utils.py  test_opencode_watcher.py  test_watcher.py  test_watcher_read_lines.py
