[project]
name = "lemonaid"
version = "0.1.0"
description = "Attention inbox for managing notifications from LLMs and other background tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.89.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
lemonaid = "lemonaid.cli:main"
lma = "lemonaid.cli:inbox_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lemonaid"]

[tool.ruff]
line-length = 100
